--- a/package.json
+++ b/package.json
@@ -1,26 +1,49 @@
 {
-  "name": "weather-journal-app",
+  "name": "capstone-travel-app",
   "version": "1.0.0",
-  "description": "This project requires you to create an asynchronous web app that uses Web API and user data to dynamically update the UI.",
-  "main": "server.js",
+  "description": "This project requires you to create an travel web app",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node src/server/index.js",
+    "build-prod": "webpack --config webpack.prod.js",
+    "build-dev": "webpack-dev-server --config webpack.dev.js --open"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yefungtchen/weather-journal-app.git"
+    "url": "git+https://github.com/yefungtchen/Capstone-travel-app.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/yefungtchen/weather-journal-app/issues"
+    "url": "https://github.com/yefungtchen/Capstone-travel-app/issues"
   },
-  "homepage": "https://github.com/yefungtchen/weather-journal-app#readme",
+  "homepage": "https://github.com/yefungtchen/Capstone-travel-app#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-fetch": "^2.6.0",
+    "nodemon": "^2.0.4",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.5.4",
+    "@babel/preset-env": "^7.5.4",
+    "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.5.3",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.14.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.2.1",
+    "terser-webpack-plugin": "^3.0.1",
+    "webpack-dev-server": "^3.7.2",
+    "workbox-webpack-plugin": "^5.1.3"
   }
 }
