HTML/CSS: adding styling

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "url": "git+https://github.com/yefungtchen/Capstone-travel-app.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Ye Fung Tchen <ye.fung.tchen@klqc.de>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/yefungtchen/Capstone-travel-app/issues"
